Fix #28: Show the target indicator when plugins are collapsed

--- a/content_editor/static/content_editor/content_editor.css
+++ b/content_editor/static/content_editor/content_editor.css
@@ -159,7 +159,6 @@ h3[draggable] {
 
 .order-machine .inline-related.for-deletion,
 .order-machine .inline-related.collapsed {
-  overflow: hidden;
   grid-template-rows: min-content 0fr;
 }
 
